--- a/client/src/styles/Basesite.module.scss
+++ b/client/src/styles/Basesite.module.scss
@@ -1,6 +1,7 @@
-.wrapper {
+.mainBackground {
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 10%;
 }
