--- a/client/src/styles/Basesite.module.scss
+++ b/client/src/styles/Basesite.module.scss
@@ -4,4 +4,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url(../images/Fade-In-Background.svg);
+    background-size: cover;
 }
