--- a/client/src/styles/RegisterSite.module.scss
+++ b/client/src/styles/RegisterSite.module.scss
@@ -1,19 +1,59 @@
-form {
+.inputSoft {
+    border: 0;
+    background: 0;
+    border-bottom: 1px solid white;
+    width: 50%;
+    margin-bottom: 5%;
+    line-height: 1.5em;
+    font-size: large;
+    outline: 0;
+    color: white;
+
+    &::placeholder{
+        color: white;
+    }
+
+    &:last-of-type{
+        margin-bottom: 2%;
+    }
+}
+.registerForm {
     display: flex;
     flex-direction: column;
     width: 50%;
+    justify-content: center;
     align-items: center;
-    padding: 5%;
+}
+.checkboxParent{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2%;
+
     > input {
-        width: 50%;
-        margin-bottom: 10%;
-        line-height: 3em;
-        border-radius: 10px;
-        outline: 0;
+        transform: scale(1.5);
+        margin-right: 1em;
     }
-    > button {
-        width: 30%;
-        line-height: 3em;
-        border-radius: 20px;
+}
+
+.registerButton {
+    width: 40%;
+    line-height: 2em;
+    font-size: large;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 1px solid black;
+
+    &:focus {
+        -webkit-box-shadow: inset 0px 0px 5px 5px rgba(0,0,0,0.20); 
+        box-shadow: inset 0px 0px 5px 5px rgba(0,0,0,0.20);
+    }
+}
+
+.registerText{
+    color: white;
+    > a{
+        color: white;
+
     }
 }
